# SmartHeadTracker

./: .gitmodules  CMakeLists.txt  LICENSE  Readme.md  cmakeBuild.sh
src/: CMakeLists.txt  colorconv.h  filters.h  halideFuncs.cpp  halideFuncs.h  main.cpp  markertracking.cpp  markertracking.h  server.cpp  server.h
